# xmind2markdown

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: xmind2markdown.py
tests/: test_smoke.py  testfile.md  testfile.xmind  xmind2markdown.py
