[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xmind2markdown"
authors = [
  { name="Frithjof Engel", email="frithjof@fms-engel.de" },
]
dynamic = ["version"]
description = "XMind to Markdown converter" 
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
xmind2markdown = "xmind2markdown:main"

